<resources>
    <string name="app_name">Project</string>
    <string name="testuser">John Doe</string>
    <string name="stats">Your Statistics</string>\
    <string name="leaderboard">Helper Ranking</string>
    <string name="myStat">My Statistics</string>
    <string name="newListing">Create Listing</string>
    <string name="browseListing">Browse Listings</string>
    <string name="viewMessages">Messages</string>
    <string name="leaveReview">Leave Review</string>
    <string name="reviewsstat">Review Statistics</string>
    <string name="numreviews">Amount you have been reviewed:</string>
    <string name="avgreviewscore">Your average review score:</string>
    <string name="listingsstat">Listing Statistics:</string>
    <string name="numneedhelp">Number of times you\'ve needed help:</string>
    <string name="catneedhelp">Category you need the most help with:</string>
    <string name="helperstat">Helper Statistics:</string>
    <string name="numofhelp">Number of times you\'ve helped:</string>
    <string name="catmosthelped">Category you help with the most:</string>
    <string name="helperscore">Your Helper Score:</string>
    <string-array name="category_names">
        <item>Gardening</item>
        <item>Car Maintenance</item>
        <item>Babysitting</item>
        <item>Cooking</item>
        <item>Pet Care</item>
        <item>Moving</item>
        <item>Miscellaneous</item>
    </string-array>
    <string-array name="sort_options">
        <item>Sort By</item>
        <item>Category</item>
        <item>Start Date</item>
    </string-array>
    <string-array name="times">
        <item>1:00</item>
        <item>2:00</item>
        <item>3:00</item>
        <item>4:00</item>
        <item>5:00</item>
        <item>6:00</item>
        <item>7:00</item>
        <item>8:00</item>
        <item>9:00</item>
        <item>10:00</item>
        <item>11:00</item>
        <item>12:00</item>
    </string-array>
    <string-array name="meridiem">
        <item>AM</item>
        <item>PM</item>
    </string-array>
</resources>