<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:ignore="HardcodedText">

    <item
        android:title=""
        android:id="@+id/closeHam"
        android:icon="@drawable/outline_arrow_menu_close_24" />
    <item
        android:id="@+id/hamNewReq"
        android:title="@string/newListing"
        android:icon="@drawable/outline_add_24"
        />
    <item
        android:id="@+id/hamBrowse"
        android:title="@string/browseListing"
        android:icon="@drawable/outline_feature_search_24"
        />
    <item
        android:id="@+id/hamReview"
        android:title="@string/leaveReview"
        android:icon="@drawable/outline_award_star_24"
        />
    <item
        android:id="@+id/hamMessage"
        android:title="@string/viewMessages"
        android:icon="@drawable/outline_chat_bubble_24"
        />
    <item
        android:id="@+id/hamStats"
        android:icon="@drawable/outline_analytics_24"
        android:title="@string/myStat" />
</menu>